tests/baselines/reference/typeGuardNarrowsIndexedAccessOfKnownProperty3.errors.txt
typeGuardNarrowsIndexedAccessOfKnownProperty3.ts(6,5): error TS2367: This comparison appears to be unintentional because the types '(number | undefined)[]' and 'undefined' have no overlap.


==== typeGuardNarrowsIndexedAccessOfKnownProperty3.ts (1 errors) ====
    type Foo = (number | undefined)[] | undefined;
    
    const foo: Foo = [1, 2, 3];
    const index = 1;
    
    if (foo !== undefined && foo[index] !== undefined && foo[index] >= 0) {
        ~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '(number | undefined)[]' and 'undefined' have no overlap.
        foo[index] // number
    }
    